# CheranevaLabs

./: .gitignore  README.md
base_sfml/: main.cpp
base_sfml/SFML/: readme.md
lab_1/: CMakeLists.txt  main.cpp
lab_1/inc/: func.hpp
lab_1/src/: func.cpp
lab_2/: CMakeLists.txt  main  main.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/inc/: lab3.hpp
lab_3/src/: lab3.cpp
lab_4/: CMakeLists.txt
lab_4/inc/: Game.hpp  Rectangle.hpp  Triangle.hpp
lab_5/inc/: Circle.hpp
